Add new navbar and start on homepage

--- a/apps/front/src/app/shared/footer/footer.component.html
+++ b/apps/front/src/app/shared/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<div class="container fixed-bottom">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+    </div>
+    <span class="text-center text-muted">Made with ❤ in Pennsylvania</span>
+
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3"><a class="text-muted" href="https://github.com/hwgilbert16"><fa-icon [icon]="faGithub"></fa-icon></a></li>
+    </ul>
+  </footer>
+</div>
