--- a/apps/front/src/app/app.component.html
+++ b/apps/front/src/app/app.component.html
@@ -1,6 +1,6 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We">
 <quizletbutfree-header></quizletbutfree-header>
 
-<router-outlet></router-outlet>
+<quizletbutfree-home></quizletbutfree-home>
 
 <quizletbutfree-footer></quizletbutfree-footer>
+
