Fix navbar positioning

--- a/apps/front/src/app/shared/footer/footer.component.html
+++ b/apps/front/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container fixed-bottom">
+<div class="container fixed-bottom footer bg-white">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
     </div>
