--- a/apps/front/src/app/shared/header/header.component.html
+++ b/apps/front/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light navbar-dark">
+<nav class="navbar navbar-expand-lg bg-light navbar-dark fs-5">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,7 +10,7 @@
           <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
         </li>
         <li class="btn-group create-button" dropdown>
-          <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
+          <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle fs-5"
                   aria-controls="dropdown-basic">
             Create <span class="caret"></span>
           </button>
@@ -20,11 +20,11 @@
           </ul>
         </li>
       </ul>
-      <div class="d-flex">
+      <div class="d-flex justify-content-around">
         <button type="button" class="btn btn-outline-light pr-6">
           Log in
         </button>
-        <button type="button" class="btn btn-warning mr-1">
+        <button type="button" class="btn btn-warning ms-4">
           Sign up
         </button>
       </div>
