Add login modal

--- a/apps/front/src/app/app.component.html
+++ b/apps/front/src/app/app.component.html
@@ -1,6 +1,6 @@
 <quizletbutfree-header></quizletbutfree-header>
 
-<quizletbutfree-home></quizletbutfree-home>
+<router-outlet></router-outlet>
 
 <quizletbutfree-footer></quizletbutfree-footer>
 
