--- a/apps/front/src/app/shared/footer/footer.component.html
+++ b/apps/front/src/app/shared/footer/footer.component.html
@@ -1,11 +1,17 @@
 <div class="container fixed-bottom footer bg-white">
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center">
-    </div>
-    <span class="text-center text-muted">Made with ❤ in Pennsylvania</span>
+  <footer class="py-3 mt-4 border-top">
+<!--    <div class="d-flex justify-content-between">-->
+<!--      <span></span>-->
+<!--      <span class="text-muted">Made with ❤ in Pennsylvania</span>-->
+<!--      <span><a class="text-muted" href="https://github.com/hwgilbert16"><fa-icon [icon]="faGithub"></fa-icon></a></span>-->
+<!--    </div>-->
 
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-muted" href="https://github.com/hwgilbert16"><fa-icon [icon]="faGithub"></fa-icon></a></li>
-    </ul>
+    <div class="d-flex justify-content-center">
+      <span class="text-muted">Made with ❤ in Pennsylvania</span>
+    </div>
+
+<!--    <div class="row col-4 d-flex justify-content-center">-->
+<!--      <span class="text-center text-muted">Made with ❤ in Pennsylvania</span>-->
+<!--    </div>-->
   </footer>
 </div>
