Add user forms and modal service

--- a/apps/front/src/app/shared/header/header.component.html
+++ b/apps/front/src/app/shared/header/header.component.html
@@ -27,7 +27,7 @@
           </button>
         </a>
         <a>
-          <button type="button" class="btn btn-warning ms-4">
+          <button type="button" class="btn btn-warning ms-4" (click)="openModal(register)">
             Sign up
           </button>
         </a>
@@ -46,20 +46,56 @@
   <div class="modal-body">
     <form class="mx-3">
       <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1">
+        <label for="login-email" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="login-email" required ngModel>
       </div>
       <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
+        <div class="d-flex justify-content-between">
+          <label for="login-password" class="form-label">Password</label>
+          <a class="form-text" [routerLink]="[]">Forgot?</a>
+        </div>
+        <input type="password" class="form-control" id="login-password" required ngModel>
       </div>
-      <div class="form-text text-center mb-3">Forgot password?</div>
+      <div class="form-text text-center mb-3">Don't have an account? <a [routerLink]="[]" (click)="modalRef?.hide(); openModal(register)">Sign up.</a></div>
       <div class="modal-footer">
         <div class="form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Remember me</label>
+          <input type="checkbox" class="form-check-input" id="login-enable-cookies" required ngModel>
+          <label class="form-check-label" for="login-enable-cookies">Remember me</label>
         </div>
         <button type="submit" class="btn btn-primary">Log in</button>
+      </div>
+    </form>
+  </div>
+</ng-template>
+
+<ng-template #register>
+  <div class="modal-header bg-light">
+    <h4 class="modal-title pull-left">Sign up</h4>
+    <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
+      <span aria-hidden="true" class="visually-hidden">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form class="mx-3" (ngSubmit)="submitRegister(registerForm)" #registerForm="ngForm" ngNativeValidate>
+      <div class="mb-3">
+        <label for="register-username" class="form-label">Username</label>
+        <input type="text" class="form-control" id="register-username" name="register-username" ngModel required>
+      </div>
+      <div class="mb-3">
+        <label for="register-email" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="register-email" name="register-email" ngModel required>
+      </div>
+      <div class="mb-3">
+        <label for="register-password" class="form-label">Password</label>
+        <input type="password" class="form-control" id="register-password" name="register-password" ngModel required>
+      </div>
+      <div class="mb-3">
+        <label for="register-confirm-password" class="form-label">Confirm Password</label>
+        <input type="password" class="form-control" id="register-confirm-password" name="register-confirm-password" ngModel required>
+      </div>
+      <div class="form-text text-center mb-3">Already have an account? <a [routerLink]="[]" (click)="modalRef?.hide(); openModal(login)">Log in.</a></div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-primary">Sign up</button>
       </div>
     </form>
   </div>
