Add start of prisma schema

--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -1,5 +1,5 @@
 <div class="text-center py-5 px-2">
   <h1 class="display-1 fw-bold">Free studying and learning for all</h1>
   <p class="pt-2 fs-5">All your favorite study tools from the other guys, all without the ads and no premium plan to pay for.</p>
-  <button class="btn btn-lg btn-primary mt-4" (click)="openModal(register)">Sign up for free</button>
+  <button class="btn btn-lg btn-primary mt-4">Sign up for free</button>
 </div>
