Remove footer, add edited landing, add preliminary create study set page

--- a/apps/front/src/app/create-study-set/create-study-set.component.html
+++ b/apps/front/src/app/create-study-set/create-study-set.component.html
@@ -1,1 +1,44 @@
-<p>create-study-set works!</p>
+<div class="py-4">
+  <div class="d-flex px-3 justify-content-between">
+    <h2>Create new study set</h2>
+    <button type="submit" class="btn btn-primary">Create</button>
+  </div>
+  <div class="container-fluid mt-3">
+    <div class="row mx-md-4">
+      <div class="col">
+        <div class="my-3">
+          <input type="input" class="form-control" placeholder="Enter a title for your study set..." id="exampleInputEmail1">
+        </div>
+        <div class="mb-3">
+          <textarea class="form-control" placeholder="Add a description..."></textarea>
+        </div>
+        <div class="mb-2 form-check">
+          <input type="checkbox" class="form-check-input" id="privateCheck">
+          <label class="form-check-label" for="privateCheck">Viewable only to me</label>
+        </div>
+      </div>
+    </div>
+    <hr>
+  </div>
+  <div class="container-fluid">
+    <div class="row mx-3">
+      <div class="card my-3 bg-light">
+        <div class="card-body">
+          <div class="card-header bg-light mb-2">1.</div>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg">
+                <label for="term" class="form-label">Term</label>
+                <input type="email" class="form-control" id="term">
+              </div>
+              <div class="col-lg">
+                <label for="definition" class="form-label">Definition</label>
+                <input type="email" class="form-control" id="definition">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
