--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -5,13 +5,13 @@
 </div>
 
 <ng-template #authenticated>
-  <div class="py-4 px-5">
+  <div class="py-4">
     <div class="d-flex px-3">
       <h2>Your sets</h2>
     </div>
-    <div class="row row-cols-1 row-cols-md-4 g-4 py-4">
+    <div class="row row-cols-1 row-cols-md-4 g-4 py-4 px-3">
       <div class="col">
-        <div class="card shadow w-4">
+        <div class="card shadow">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="card shadow w-4">
+        <div class="card shadow">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -35,17 +35,5 @@
         </div>
       </div>
     </div>
-<!--    <div class="d-flex py-4 px-3 justify-content-lg-evenly">-->
-<!--      <div class="card shadow" style="width: 24rem;">-->
-<!--        <div class="card-body">-->
-<!--          <h5 class="card-title">Card title</h5>-->
-<!--          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
-<!--          <a href="#" class="btn btn-primary">Go somewhere</a>-->
-<!--        </div>-->
-<!--        <div class="card-footer bold">-->
-<!--          <fa-icon [icon]="faUser"></fa-icon> johndoe46-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
   </div>
 </ng-template>
