Switch to using fontawesome library and add new card section

--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -18,7 +18,7 @@
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
           <div class="card-footer bold">
-            <fa-icon [icon]="faUser"></fa-icon> johndoe46
+            <fa-icon [icon]="['far', 'user']" ></fa-icon> johndoe46
           </div>
         </div>
       </div>
@@ -30,7 +30,7 @@
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
           <div class="card-footer bold">
-            <fa-icon [icon]="faUser"></fa-icon> johndoe46
+            <fa-icon [icon]="['far', 'user']" ></fa-icon> johndoe46
           </div>
         </div>
       </div>
