--- a/apps/front/src/app/create-study-set/create-study-set.component.html
+++ b/apps/front/src/app/create-study-set/create-study-set.component.html
@@ -41,4 +41,16 @@
       </div>
     </div>
   </div>
+  <div class="container-fluid">
+    <div class="row mx-3">
+      <div class="card my-3 bg-light">
+        <div class="card-body d-flex justify-content-center mt-2 fs-4 new-card">
+          <p><fa-icon [icon]="['far', 'plus-square']" class="pe-1"></fa-icon>Add new card</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="d-flex px-3 justify-content-between flex-row-reverse">
+    <button type="submit" class="btn btn-primary">Create</button>
+  </div>
 </div>
