--- a/apps/front/src/app/shared/header/header.component.html
+++ b/apps/front/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-light navbar-dark fs-5">
   <div class="container-fluid">
-    <a class="navbar-brand" [routerLink]="''">Navbar</a>
+    <img class="navbar-brand img-fluid mt-1" src="assets/scholarsome-logo-white-lowercase.svg" width="10%" height="10%">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
