--- a/apps/front/src/app/create/create-card/create-card.component.html
+++ b/apps/front/src/app/create/create-card/create-card.component.html
@@ -4,8 +4,8 @@
       <div class="d-flex justify-content-between">
         <span>{{cardIndex + 1}}.</span>
         <div>
-          <fa-icon *ngIf="cardIndex !== 0" [icon]="['far', 'arrow-alt-circle-up']" class="mx-3 card-button" popover="Move this card up one" triggers="mouseenter:mouseleave" (click)="moveCard(-1)"></fa-icon>
-          <fa-icon [icon]="['far', 'arrow-alt-circle-down']" class="mx-3 card-button" popover="Move this card down one" triggers="mouseenter:mouseleave" (click)="moveCard(1)"></fa-icon>
+          <fa-icon *ngIf="upArrow" [icon]="['far', 'arrow-alt-circle-up']" class="mx-3 card-button" popover="Move this card up one" triggers="mouseenter:mouseleave" (click)="moveCard(-1)"></fa-icon>
+          <fa-icon *ngIf="downArrow" [icon]="['far', 'arrow-alt-circle-down']" class="mx-3 card-button" popover="Move this card down one" triggers="mouseenter:mouseleave" (click)="moveCard(1)"></fa-icon>
           <fa-icon [icon]="['far', 'trash-can']" class="ms-3 card-button" popover="Delete this card" triggers="mouseenter:mouseleave" (click)="deleteCard()"></fa-icon>
         </div>
       </div>
