Add start of create card request

--- a/apps/front/src/app/create/create-card/create-card.component.html
+++ b/apps/front/src/app/create/create-card/create-card.component.html
@@ -10,15 +10,15 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid" #inputsContainer>
       <div class="row">
         <div class="col-lg">
           <label for="term" class="form-label">Term</label>
-          <input type="email" class="form-control" id="term">
+          <input type="email" class="form-control" id="term" #term>
         </div>
         <div class="col-lg">
           <label for="definition" class="form-label">Definition</label>
-          <input type="email" class="form-control" id="definition">
+          <input type="email" class="form-control" id="definition" #definition>
         </div>
       </div>
     </div>
