Add new coloring

--- a/apps/front/src/app/create/create-card/create-card.component.html
+++ b/apps/front/src/app/create/create-card/create-card.component.html
@@ -1,6 +1,6 @@
-<div class="card my-3 bg-light">
+<div class="card my-3 bg-white">
   <div class="card-body">
-    <div class="card-header bg-light mb-2">
+    <div class="card-header bg-white mb-2">
       <div class="d-flex justify-content-between">
         <span>{{cardIndex + 1}}.</span>
         <div>
