--- a/apps/front/src/app/create/create.component.html
+++ b/apps/front/src/app/create/create.component.html
@@ -27,7 +27,7 @@
   </div>
   <div class="container-fluid">
     <div class="row mx-3">
-      <div class="card my-3 bg-light">
+      <div class="card my-3 bg-white">
         <div class="card-body d-flex justify-content-center mt-2 fs-4 new-card" (click)="addCard()">
           <p><fa-icon [icon]="['far', 'plus-square']" class="pe-1"></fa-icon>Add new card</p>
         </div>
