--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -9,7 +9,7 @@
     <div class="d-flex px-3">
       <h2>Your sets</h2>
     </div>
-    <div class="row row-cols-1 row-cols-md-4 g-4 py-4 px-3">
+    <div class="row row-cols-1 row-cols-md-4 g-4 py-4 px-3 w-100">
       <div class="col">
         <div class="card shadow">
           <div class="card-body">
