--- a/apps/front/src/app/shared/header/header.component.html
+++ b/apps/front/src/app/shared/header/header.component.html
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-expand-lg bg-light navbar-dark fs-5">
+<nav class="navbar navbar-expand-lg navbar-dark fs-5">
   <div class="container-fluid">
-    <a [routerLink]="''"><img class="navbar-brand img-fluid mt-1" src="assets/scholarsome-logo-white-lowercase.svg" width="10%" height="10%"></a>
+    <a [routerLink]="''"><img class="navbar-brand img-fluid mt-1" src="assets/scholarsome-logo-purple-lowercase.svg" width="10%" height="10%"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" [routerLink]="''">Home</a>
+          <a class="nav-link text-black" aria-current="page" [routerLink]="''">Home</a>
         </li>
         <li class="btn-group create-button" dropdown>
           <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle fs-5"
@@ -23,7 +23,7 @@
       <div class="d-flex">
         <div *ngIf="!getCookie('authenticated');else user">
           <a>
-            <button type="button" class="btn btn-outline-light pr-6" (click)="openModal(login)">
+            <button type="button" class="btn btn-outline-dark pr-6" (click)="openModal(login)">
               Log in
             </button>
           </a>
@@ -36,7 +36,7 @@
         <ng-template #user>
           <ul class="nav navbar-nav">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle text-white text-left" data-bs-toggle="dropdown"><fa-icon [icon]="['far', 'user']"></fa-icon></a>
+              <a class="nav-link dropdown-toggle text-black text-left" data-bs-toggle="dropdown"><fa-icon [icon]="['far', 'user']"></fa-icon></a>
               <div class="dropdown-menu dropdown-menu-end">
                 <a class="dropdown-item">Reports</a>
                 <a class="dropdown-item">Settings</a>
@@ -52,7 +52,7 @@
 </nav>
 
 <ng-template #login>
-  <div class="modal-header bg-light">
+  <div class="modal-header bg-white">
     <h4 class="modal-title pull-left">Log in</h4>
     <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
       <span aria-hidden="true" class="visually-hidden">&times;</span>
@@ -84,7 +84,7 @@
 </ng-template>
 
 <ng-template #register>
-  <div class="modal-header bg-light">
+  <div class="modal-header bg-white">
     <h4 class="modal-title pull-left">Sign up</h4>
     <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
       <span aria-hidden="true" class="visually-hidden">&times;</span>
