--- a/apps/front/src/app/shared/header/header.component.scss
+++ b/apps/front/src/app/shared/header/header.component.scss
@@ -1,11 +1,6 @@
 .navbar {
-  background-color: #233f6f !important;
+  background-color: white !important;
   box-shadow: black;
-  filter: drop-shadow(0 0.4rem 0.25rem rgba(0, 0, 0, 0.2));
-}
-
-.navbar-brand {
-  color: white;
 }
 
 .navbar-nav > li {
@@ -13,8 +8,11 @@
   padding-right:10px;
 }
 
-.navbar-nav > li > a:hover{
-  filter: drop-shadow(0 0.4rem 0.25rem rgba(0, 0, 0, 0.6)) !important;
+.nav-link {
+  text-decoration-color: #8438ff !important;
+}
+
+.nav-link:hover {
   text-decoration: underline;
 }
 
