Add set creation, add JWT decoding, add set database service, add new migrations, add spacing input to alert component

--- a/apps/front/src/app/shared/alert/alert.component.html
+++ b/apps/front/src/app/shared/alert/alert.component.html
@@ -1,2 +1,2 @@
-<div class="mt-4"></div>
+<div class="{{spacingClass}}"></div>
 <alert type="{{type}}" dismissOnTimeout="{{dismiss ? 3000 : undefined}}">{{message}}</alert>
