--- a/apps/front/src/app/create/create.component.html
+++ b/apps/front/src/app/create/create.component.html
@@ -7,13 +7,13 @@
     <div class="row mx-md-4">
       <div class="col">
         <div class="my-3">
-          <input type="input" class="form-control" placeholder="Enter a title for your study set..." id="exampleInputEmail1">
+          <input type="input" class="form-control" placeholder="Enter a title for your study set..." #title>
         </div>
         <div class="mb-3">
-          <textarea class="form-control" placeholder="Add a description..."></textarea>
+          <textarea class="form-control" placeholder="Add a description..." #description></textarea>
         </div>
         <div class="mb-2 form-check">
-          <input type="checkbox" class="form-check-input" id="privateCheck">
+          <input type="checkbox" class="form-check-input" id="privateCheck" #private>
           <label class="form-check-label" for="privateCheck">Viewable only to me</label>
         </div>
       </div>
@@ -35,6 +35,6 @@
     </div>
   </div>
   <div class="d-flex px-3 justify-content-between flex-row-reverse">
-    <button type="submit" class="btn btn-primary">Create</button>
+    <button type="submit" class="btn btn-primary" (click)="createSet()">Create</button>
   </div>
 </div>
