Move to better organized routing system

--- a/apps/front/src/app/shared/header/header.component.html
+++ b/apps/front/src/app/shared/header/header.component.html
@@ -16,7 +16,7 @@
           </button>
           <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
               role="menu" aria-labelledby="button-basic">
-            <li role="menuitem"><a class="dropdown-item" [routerLink]="'create-study-set'"><fa-icon [icon]="['far', 'clone']"></fa-icon> &nbsp;Study set</a></li>
+            <li role="menuitem"><a class="dropdown-item" [routerLink]="'create/study-set'"><fa-icon [icon]="['far', 'clone']"></fa-icon> &nbsp;Study set</a></li>
           </ul>
         </li>
       </ul>
