--- a/apps/front/src/app/create/study-set/create-study-set.component.html
+++ b/apps/front/src/app/create/study-set/create-study-set.component.html
@@ -1,37 +1,40 @@
-<div class="py-4">
-  <div class="d-flex px-3 justify-content-between">
-    <h2>Create new study set</h2>
-    <button type="submit" class="btn btn-primary" (click)="createSet()">Create <ng-template #createButton></ng-template></button>
-  </div>
-  <div class="container-fluid mt-3">
-    <div class="row mx-md-4">
-      <div class="col">
-        <div class="my-3">
-          <input type="input" class="form-control" placeholder="Enter a title for your study set..." #title>
+<fieldset [disabled]="formDisabled">
+  <div class="py-4">
+    <div class="d-flex px-3 justify-content-between">
+      <h2>Create new study set</h2>
+      <button type="submit" class="btn btn-primary" (click)="createSet()">Create</button>
+    </div>
+    <div class="container-fluid mt-3">
+      <div class="row mx-md-4">
+        <div class="col">
+          <div class="my-3">
+            <input type="input" class="form-control" placeholder="Enter a title for your study set..." #title>
+          </div>
+          <div class="mb-3">
+            <textarea class="form-control" placeholder="Add a description..." #description></textarea>
+          </div>
+          <div class="mb-2 form-check">
+            <input type="checkbox" class="form-check-input" id="privateCheck" #privateCheck>
+            <label class="form-check-label" for="privateCheck">Viewable only to me</label>
+          </div>
         </div>
-        <div class="mb-3">
-          <textarea class="form-control" placeholder="Add a description..." #description></textarea>
-        </div>
-        <div class="mb-2 form-check">
-          <input type="checkbox" class="form-check-input" id="privateCheck" #privateCheck>
-          <label class="form-check-label" for="privateCheck">Viewable only to me</label>
+      </div>
+      <hr>
+    </div>
+    <div class="container-fluid">
+      <div class="row mx-3">
+        <ng-template scholarsomeCardList></ng-template>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row mx-3">
+        <div class="card my-3 bg-white">
+          <div class="card-body d-flex justify-content-center mt-2 fs-4 new-card" (click)="addCard()">
+            <p><fa-icon [icon]="['far', 'plus-square']" class="pe-1"></fa-icon>Add new card</p>
+          </div>
         </div>
       </div>
     </div>
-    <hr>
   </div>
-  <div class="container-fluid">
-    <div class="row mx-3">
-      <ng-template scholarsomeCardList></ng-template>
-    </div>
-  </div>
-  <div class="container-fluid">
-    <div class="row mx-3">
-      <div class="card my-3 bg-white">
-        <div class="card-body d-flex justify-content-center mt-2 fs-4 new-card" (click)="addCard()">
-          <p><fa-icon [icon]="['far', 'plus-square']" class="pe-1"></fa-icon>Add new card</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
+</fieldset>
