--- a/apps/front/src/app/view/view.component.html
+++ b/apps/front/src/app/view/view.component.html
@@ -1,5 +1,11 @@
-<div class="py-4">
-  <div class="d-flex px-3">
+<div class="d-flex justify-content-center mt-5" #spinner>
+  <div class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
+
+<div class="py-4 ms-4" hidden #container>
+  <div class="d-flex mx-3">
     <h2>Your sets</h2>
   </div>
   <div class="row row-cols-1 row-cols-md-4 g-4 py-4 px-3 w-100">
