--- a/apps/front/src/app/view/study-set-card/study-set-card.component.scss
+++ b/apps/front/src/app/view/study-set-card/study-set-card.component.scss
@@ -1,3 +1,13 @@
 .set-card:hover {
   --bs-card-border-color: #8438ff;
 }
+
+.card-text {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+a {
+  color: inherit;
+}
