--- a/apps/front/src/app/view/study-set/view-study-sets.component.html
+++ b/apps/front/src/app/view/study-set/view-study-sets.component.html
@@ -1,1 +1,7 @@
+<div class="d-flex justify-content-center mt-5" #spinner>
+  <div class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
+
 <p>study-set works!</p>
